--- a/Scroll-with-zoom-main/css/style.css
+++ b/Scroll-with-zoom-main/css/style.css
@@ -23,38 +23,8 @@
 .content .section.hero {
   background-image: url(https://1.bp.blogspot.com/-CBSM8jTWmIU/YJ1TpNVZS4I/AAAAAAAAIg4/Lqzh4EKai5MvkEbxb2w9Qc4niM7yltyxQCNcBGAsYHQ/s2048/ciencias+naturales.png);
   background-position: center center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
-}
-
-.content .section.gradient-purple {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(135deg, #6e45e2, #88d3ce);
-  padding: 20px;
-}
-
-.content .section.gradient-purple .columns {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 76vh;
-  color: black;
-  font-size: 60px;
-  
-}
-
-
-.content .section.gradient-purple .column {
-  flex: 1;
-  margin: 0 10px;
-  background: linear-gradient(135deg, #45e281, #e2e612);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  position: relative;
 }
 
 .image-container {
@@ -76,3 +46,145 @@
   object-position: center center;
 }
 
+.content .section.gradient-purple {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #6e45e2, #88d3ce);
+  padding: 20px;
+  text-align: center;
+  color: white;
+  flex-wrap: wrap;
+}
+
+.content .section.gradient-purple p1 {
+  margin-bottom: 100px;
+  font-size: 24px;
+}
+
+.content .section.gradient-purple .columns {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 76vh;
+  color: black;
+  font-size: 60px;
+}
+
+.content .section.gradient-purple .column {
+  flex: 1;
+  margin: 0 10px;
+  background: linear-gradient(135deg, #45e281, #e2e612);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: relative;
+  flex-wrap: wrap;
+}
+
+.content .section.gradient-blue {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #6e45e2, #88d3ce);
+}
+
+
+.team-info {
+  background-color: #000000;
+  color: rgb(196, 192, 192);
+  padding: 15px;
+  text-align: left;
+}
+
+.team-info h2 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+.team-info p {
+  padding-block: 10px;
+  font-size: 1rem;
+  margin: 10px 5;
+  padding-left: 10px;
+}
+
+.team-members {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.team-member {
+  text-align: center;
+  margin: 0 15px;
+}
+
+.team-member img {
+  border-radius: 50%;
+  width: 50px;
+  height: 59px;
+}
+
+.team-member p {
+  margin: 25px 0 0 0;
+  color: #eaff00;
+}
+
+.quote-section{
+  margin: 30px;
+  padding: 0%;
+  margin-block: unset;
+}
+
+.quote-section .image {
+  flex: 1;
+  padding: -10px;
+}
+
+.quote-section .image img {
+  width: 80%;
+  height: auto;
+  padding-left: 160px;
+  border-radius: 30px;
+  flex-wrap: wrap;
+}
+
+.quote-section .text {
+  flex: 2;
+}
+
+.quote-section .text h2 {
+  padding-left: 240px;
+  font-size: 48px;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.quote-section .text p {
+  padding-left: 240px;
+  font-size: 25px;
+  color: #ffffff;
+}
+
+
+.new-layout {
+  display: contents;
+  padding: 10px;
+
+}
+
+.quote-section {
+  flex: 2;
+  background: #240046;
+  height: 100px;
+  color: rgb(242, 255, 0);
+  display: flex;
+  align-items: center;
+  padding: 2px;
+  justify-content: center;
+  font-size: 24px;
+}
