--- a/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/css/style.css
+++ b/Los_Del_Espacio-master (1)/Los_Del_Espacio-master/Los_Del_Espacio/css/style.css
@@ -53,45 +53,54 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: white; 
+  
 }
 
 
 .content .section.gradient-blue .new-layout {
-  background: rgba(0, 0, 0, 0.5); 
+  background: rgba(0, 0, 0, 0.993); 
   padding: 20px;
   border-radius: 10px;
 }
 
-.content .section.gradient-purple p1 {
-  margin-bottom: 100px;
-  font-size: 24px;
+.content .section.section.gradient-blue p1 {
+  font-size: 30px;
+  color: #ffffff;
+  height: 90%;
+  text-align:center;
+  
 }
 
-.content .section.gradient-purple .columns {
+.content .section.gradient-blue .columns {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  height: 76vh;
+  height: 77%;
   color: black;
-  font-size: 60px;
+  font-size: 24px;
+  margin-top: 150px;
+  font-family: "Times New Roman", Times, serif;
+
 }
 
-.content .section.gradient-purple .column {
+.content .section.gradient-blue .column {
   flex: 1;
   margin: 0 10px;
   background: linear-gradient(135deg, #45e281, #e2e612);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  border-radius: 100px;
+  box-shadow: 0 4px 8px rgba(224, 189, 189, 0.1);
   text-align: center;
   position: relative;
   flex-wrap: wrap;
+  font-size: 50px;
 }
 
 .content .section.gradient-blue {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .team-info {
@@ -184,11 +193,9 @@
 
 .quote-section {
   flex: 2;
-  color: rgb(242, 255, 0);
   display: flex;
   padding: 2px;
   justify-content: center;
   font-size: 24px;
 }
-
 
